# dr-acme-service-oculus

./: .envrc  .gitignore  404.html  docker-compose.sh  docker-compose.yml  index.html  mkdocs.yml  pyproject.toml
code-reference/: index.html
project/: index.html
src/acme/service/oculus/: __init__.py  apps.py  asgi.py  cdtq.py  conf.py  urls.py  wsgi.py
src/acme/service/oculus/api/analytics/: event.py
src/acme/service/oculus/api/ingress/: __init__.py  event.py
src/acme/service/oculus/docs/: .pages  code-reference.md  index.md  project.md
src/acme/service/oculus/docs/static/css/: extra.css
src/acme/service/oculus/management/commands/: application-add.py  application-disable.py  show-stats.py
src/acme/service/oculus/migrations/: 0001_create_model_application.py  0002_create_model_event.py  0003_create_model_result_error.py  0004_create_constraint_event-unique.py
src/acme/service/oculus/models/: __init__.py  application.py  event.py  result_error.py
tests/acme/service/oculus/management/commands/: __init__.py  test_commands.py
